some fixes on smaller screens for tab content

--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ html {
     height: calc(100vh - 60px);
 }
 
+h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: underline;
+    text-align: left;
+    
+}
+
 .tab {
     flex: 0.3;
     transition: all 0.5s ease;
@@ -69,9 +76,8 @@ html {
 .tab-content {
     display: none;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;                          /* Align the content to the top */
+    left: 0;                         /* Align the content to the left */
     width: 100%;
     height: 100%;
     background-color: inherit;
@@ -81,8 +87,9 @@ html {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;      /* Align content to the top */
     align-items: center;
+    overflow-y: auto;                /* Enable vertical scrolling */
 }
 
 .tab.active .tab-content {
@@ -92,6 +99,7 @@ html {
 .tab-title {
     font-family: 'Impact', sans-serif;
     font-size: 2.2em;
+    margin-top: 10px;
     margin-bottom: 20px;
 }
 
@@ -148,8 +156,12 @@ footer {
     padding: 10px;
     text-align: center;
     font-size:1em;
-    flex-shrink: 0;
 }
+
+footer p {
+    margin: 0;             
+}
+
 
 .footer-content {
     display: flex;
@@ -197,15 +209,16 @@ footer {
 /* phone css */ 
 @media only screen and (max-width: 600px) {
    
-    
-    body, .accordion, iframe, .thumbnail img {
-        margin: 0;
-        padding: 0;
-        border: none;
+    .tab-content {
+        max-height: 80vh;       
+        overflow-y: auto;       
+        padding: 10px;
+        justify-content: flex-start;
     }
 
+
     .accordion label {
-        font-size: 12px;  
+        font-size: 13px;  
     }
 
     .accordion h2 {
@@ -219,26 +232,31 @@ footer {
     }
 
     .thumbnail img {
-        width: 100%;  
+        width: 80%;  
         height: auto;
-    }
-
-    .accordion {
-        padding: 10px;
     }
 
     .accordion input[type="radio"] + label {
         width: 50px; 
     }
 
-    .accordion p, .accordion h2 {
+    .accordion p {
+        font-size: 12px; 
+    }
+
+
+    .accordion h3 {
         font-size: 14px; 
     }
 
     footer {
-        padding: 5px;
-        font-size:0.6em;
+        font-size: 12px;
     }
     
-    
+    html, body {
+        overflow-x: hidden;     
+        margin: 0;
+        padding: 0;
+    }
+
 }
